// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly render expense summary with 1 expense  1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`correctly render expense summary with multiple expensed  1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $23,521,349.87
  </h1>
</div>
`;
